add vue-infinite-loading and home content

--- a/index.html
+++ b/index.html
@@ -1,9 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>rssmonster</title>
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <title>vue-infinite-loading</title>
+  <style>
+    body{
+      margin: 0;
+    }
+    .example-list-item{
+      margin: 0;
+      padding: 0 10px;
+      font-size: 14px;
+      line-height: 40px;
+      color: #666;
+      background-color: #fafafa;
+      border-top: 1px solid #fff;
+      border-bottom: 1px solid #e3e3e3;
+    }
+    .example-list-item::before{
+      content: 'Line: ';
+    }
+  </style>
+  <!-- CSS -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="stylesheet" href="http://localhost/rssmonster/public/css/bootstrap.min.css">
+  <link rel="stylesheet" href="http://localhost/rssmonster/public/css/font-awesome.min.css">
+  <link rel="stylesheet" href="http://localhost/rssmonster/public/css/app.css">
+
+  <!-- Configuring Web Applications -->
+  <link rel="apple-touch-icon" sizes="57x57" href="http://localhost/rssmonster/public/img/favicon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="http://localhost/rssmonster/public/favicon/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="http://localhost/rssmonster/public/favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="http://localhost/rssmonster/public/favicon/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="http://localhost/rssmonster/public/favicon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="http://localhost/rssmonster/public/favicon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="http://localhost/rssmonster/public/favicon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="http://localhost/rssmonster/public/favicon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="http://localhost/rssmonster/public/favicon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="http://localhost/rssmonster/public/favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="http://localhost/rssmonster/public/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="http://localhost/rssmonster/public/favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="http://localhost/rssmonster/public/favicon/favicon-16x16.png">
+  <link rel="manifest" href="http://localhost/rssmonster/public/favicon/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="http://localhost/rssmonster/public/img/favicon/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+</head>
   <body>
     <div id="app"></div>
     <script src="/dist/build.js"></script>
