--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		<!-- CSS -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<link rel="stylesheet" href="http://localhost/rssmonster/public/css/bootstrap.min.css">
-		<link rel="stylesheet" href="http://localhost/rssmonster/public/css/font-awesome.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 		<!-- Configuring Web Applications -->
 		<link rel="apple-touch-icon" sizes="57x57" href="http://localhost/rssmonster/public/img/favicon/apple-icon-57x57.png">
