update sort order when moving categories

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	 <head>
 		<meta charset="UTF-8">
-		<title>vue-infinite-loading</title>
+		<title>RSSMonster</title>
 		<style>
 		body {
 			margin: 0;
@@ -28,7 +28,6 @@
 		<link rel="icon" type="image/png" sizes="32x32" href="http://localhost/rssmonster/public/favicon/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="96x96" href="http://localhost/rssmonster/public/favicon/favicon-96x96.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="http://localhost/rssmonster/public/favicon/favicon-16x16.png">
-		<link rel="manifest" href="http://localhost/rssmonster/public/favicon/manifest.json">
 		<meta name="msapplication-TileColor" content="#ffffff">
 		<meta name="msapplication-TileImage" content="http://localhost/rssmonster/public/img/favicon/ms-icon-144x144.png">
 		<meta name="theme-color" content="#ffffff">
